@@ -174,7 +174,7 @@ public class Cow extends CreatureBase {
   public void tick() {
     super.tick();
     //do AI
-    updateFlags();
+    updateFlags(0,0,0);
     boolean fell;
     if (inWater && mode != MODE_FLYING) {
       fell = gravity(0.5f + (float)Math.sin(floatRad) * 0.25f);
